# xege-rs

./: Cargo.toml  LICENSE  README.md  index.html
docs/: index.html
examples/: event.rs  graph_line.rs  graph_path.rs  graph_rop2.rs  graph_transform.rs  image.rs  init.rs  no_force_exit.rs  set_caption.rs  window_move.rs  window_resize.rs  window_show_hide.rs
src/: color.rs  console.rs  enums.rs  env.rs  graphics.rs  image.rs  lib.rs  mat.rs  msg.rs  path.rs  time.rs  window.rs
tests/: env.rs
